--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="song-info">
         <img
           id="song-image"
-          src="10.jpg"
+          src="/media/10.jpg"
           alt="Song Image"
           class="img-thumbnail rounded-circle"
         />
@@ -39,32 +39,44 @@
       </div>
       <!-- ... existing HTML ... -->
       <ul class="playlist">
-        <li data-src="10.mp3" data-image="10.jpg">Duniya</li>
-        <li data-src="11.mp3" data-image="11.jpg">Lagdi Lahore Di</li>
-        <li data-src="12.mp3" data-image="12.jpg">Putt Jatt Da</li>
-        <li data-src="13.mp3" data-image="13.jpg">Baaeishein</li>
-        <li data-src="14.mp3" data-image="14.jpg">Vaaste</li>
-        <li data-src="15.mp3" data-image="15.jpg">Lut Gaye</li>
-        <li data-src="16.mp3" data-image="16.jpg">Meri Jindagi Hai Tu</li>
-        <li data-src="17.mp3" data-image="17.jpg">
+        <li data-src="/media/10.mp3" data-image="/media/10.jpg">Duniya</li>
+        <li data-src="/media/11.mp3" data-image="/media/11.jpg">
+          Lagdi Lahore Di
+        </li>
+        <li data-src="/media/12.mp3" data-image="/media/12.jpg">
+          Putt Jatt Da
+        </li>
+        <li data-src="/media/13.mp3" data-image="/media/13.jpg">Baaeishein</li>
+        <li data-src="/media/14.mp3" data-image="/media/14.jpg">Vaaste</li>
+        <li data-src="/media/15.mp3" data-image="/media/15.jpg">Lut Gaye</li>
+        <li data-src="/media/16.mp3" data-image="/media/16.jpg">
+          Meri Jindagi Hai Tu
+        </li>
+        <li data-src="/media/17.mp3" data-image="/media/17.jpg">
           Batao Yaad Hai Tumko Wo Jab Dil Ko Churaya Tha
         </li>
-        <li data-src="18.mp3" data-image="18.jpg">Pasoori</li>
-        <li data-src="19.mp3" data-image="19.jpg">Insane</li>
-        <li data-src="1.mp3" data-image="1.jpg">On my way</li>
-        <li data-src="2.mp3" data-image="2.jpg">Faded</li>
-        <li data-src="3.mp3" data-image="3.jpg">Cartoon</li>
-        <li data-src="4.mp3" data-image="4.jpg">Warriko</li>
-        <li data-src="5.mp3" data-image="5.jpg">Looking For Me</li>
-        <li data-src="6.mp3" data-image="6.jpg">Chocolate</li>
-        <li data-src="7.mp3" data-image="7.jpg">Tamasha</li>
-        <li data-src="8.mp3" data-image="8.jpg">Sanak</li>
-        <li data-src="9.mp3" data-image="9.jpg">Dilbar</li>
-        <li data-src="20.mp3" data-image="20.jpeg">Maan Meri Jaan</li>
-        <li data-src="21.mp3" data-image="21.jpeg">
+        <li data-src="/media/18.mp3" data-image="/media/18.jpg">Pasoori</li>
+        <li data-src="/media/19.mp3" data-image="/media/19.jpg">Insane</li>
+        <li data-src="/media/1.mp3" data-image="/media/1.jpg">On my way</li>
+        <li data-src="/media/2.mp3" data-image="/media/2.jpg">Faded</li>
+        <li data-src="/media/3.mp3" data-image="/media/3.jpg">Cartoon</li>
+        <li data-src="/media/4.mp3" data-image="/media/4.jpg">Warriko</li>
+        <li data-src="/media/5.mp3" data-image="/media/5.jpg">
+          Looking For Me
+        </li>
+        <li data-src="/media/6.mp3" data-image="/media/6.jpg">Chocolate</li>
+        <li data-src="/media/7.mp3" data-image="/media/7.jpg">Tamasha</li>
+        <li data-src="/media/8.mp3" data-image="/media/8.jpg">Sanak</li>
+        <li data-src="/media/9.mp3" data-image="/media/9.jpg">Dilbar</li>
+        <li data-src="/media/20.mp3" data-image="/media/20.jpeg">
+          Maan Meri Jaan
+        </li>
+        <li data-src="/media/21.mp3" data-image="/media/21.jpeg">
           Tu Hai To Mujhe Fir Or Kya Chahiye
         </li>
-        <li data-src="22.mp3" data-image="22.jpg">Hanuman Chalisa</li>
+        <li data-src="/media/22.mp3" data-image="/media/22.jpg">
+          Hanuman Chalisa
+        </li>
       </ul>
     </div>
     <script src="A.JS"></script>
